<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DriverSettingsActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:gravity="center|top">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:layout_gravity="left"
                android:layout_marginLeft="26dp"
                android:src="@mipmap/ic_default_user"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <EditText
                android:id="@+id/firsName"
                android:hint="@string/firstName"
                android:inputType="textEmailAddress"
                android:layout_width="144.33dp"
                android:layout_height="38dp"
                android:background="@drawable/default_mini_et"
                android:paddingLeft="18dp"
                android:layout_gravity="left"
                android:layout_marginRight="3dp"/>
            <EditText
                android:id="@+id/lastName"
                android:hint="@string/lastName"
                android:inputType="textEmailAddress"
                android:layout_width="144.33dp"
                android:layout_height="38dp"
                android:background="@drawable/default_mini_et"
                android:paddingLeft="18dp"
                android:layout_gravity="right"
                android:layout_marginLeft="3dp"/>
        </LinearLayout>

        <EditText
            android:id="@+id/LicenceN"
            android:hint="@string/LicenceN"
            android:inputType="textEmailAddress"
            android:layout_width="299dp"
            android:layout_height="38dp"
            android:background="@drawable/default_et"
            android:layout_marginTop="6dp"
            android:paddingLeft="48dp" />
        <EditText
            android:id="@+id/phone"
            android:hint="@string/phone"
            android:inputType="number"
            android:layout_width="299dp"
            android:layout_height="38dp"
            android:background="@drawable/default_et"
            android:layout_marginTop="6dp"
            android:paddingLeft="48dp" />
        <EditText
            android:id="@+id/carName"
            android:hint="@string/carName"
            android:inputType="textEmailAddress"
            android:layout_width="299dp"
            android:layout_height="38dp"
            android:background="@drawable/default_et"
            android:layout_marginTop="6dp"
            android:paddingLeft="48dp" />
        <EditText
            android:id="@+id/numPlates"
            android:hint="@string/numPlates"
            android:inputType="textEmailAddress"
            android:layout_width="299dp"
            android:layout_height="38dp"
            android:background="@drawable/default_et"
            android:layout_marginTop="6dp"
            android:paddingLeft="48dp" />
        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_margin="10dp">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="carX"
                android:id="@+id/carX"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="carXL"
                android:id="@+id/carXL"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delivery"
                android:id="@+id/carBlack"/>
        </RadioGroup>
        <Button
            android:id="@+id/confirm"
            android:layout_marginTop="1dp"
            android:background="@drawable/confirm_bu"
            android:layout_width="159.67dp"
            android:layout_height="42.67dp"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>