<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
     android:layout_width="match_parent">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DriverMapActivity" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/Buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/logout"
                android:text="@string/logout"
                android:background="@drawable/style_bu2"
                android:layout_marginTop="2dp"
                android:layout_marginHorizontal="2dp"
                android:textColor="#ffffff"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/history"
                android:text="@string/history"
                android:background="@drawable/style_bu2"
                android:layout_marginTop="2dp"
                android:layout_marginHorizontal="2dp"
                android:textColor="#ffffff"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/settings"
                android:text="@string/settings"
                android:background="@drawable/style_bu2"
                android:layout_marginTop="2dp"
                android:layout_marginHorizontal="2dp"
                android:textColor="#ffffff"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_weight="1"
                />
        </LinearLayout>
        <Switch
            android:id="@+id/workingSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="working "/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/customerInfo"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_gravity="bottom"
        android:visibility="gone"
        android:background="@android:color/white"
        android:orientation="vertical">
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/customerProfileImage"
                android:layout_height="100sp"
                android:layout_width="100sp"
                android:padding="20sp"
                android:layout_weight="0"
                android:src="@mipmap/ic_default_user"/>
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="8dp">
                <TextView
                    android:id="@+id/customerDestination"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="Destination: --"
                    android:paddingBottom="10sp"/>
                <TextView
                    android:id="@+id/customerName"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:paddingBottom="10sp"
                    android:paddingTop="20sp"/>
                    <TextView
                        android:id="@+id/customerPhone"
                        android:paddingBottom="10sp"
                        android:text="06245978822"
                        android:paddingTop="20sp"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"/>
            </LinearLayout>

            <Button
                android:id="@+id/buCall"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="0"
                android:background="@drawable/call" />
        </LinearLayout>
        <Button
            android:id="@+id/rideStatus"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/pickedCustomer"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="2dp"
            android:background="@drawable/style_bu"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:textStyle="bold"/>
    </LinearLayout>

</FrameLayout>
