<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CustomerMapActivity" />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/Buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/logout"
                android:text="@string/logout"
                android:background="@drawable/style_bu2"
                android:layout_marginTop="2dp"
                android:layout_marginHorizontal="2dp"
                android:textColor="#ffffff"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/history"
                android:text="@string/history"
                android:background="@drawable/style_bu2"
                android:layout_marginTop="2dp"
                android:layout_marginHorizontal="2dp"
                android:textColor="#ffffff"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/settings"
                android:text="@string/settings"
                android:background="@drawable/style_bu2"
                android:layout_marginTop="2dp"
                android:layout_marginHorizontal="2dp"
                android:textColor="#ffffff"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_weight="1"
                />
        </LinearLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_below="@+id/Buttons">
            <fragment
                android:id="@+id/place_autocomplete_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
                />

        </android.support.v7.widget.CardView>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        >

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_gravity="bottom"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/driverInfo"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:background="@android:color/white"
                android:orientation="horizontal"
                android:visibility="gone">
                <ImageView
                    android:id="@+id/driverProfileImage"
                    android:layout_height="100sp"
                    android:layout_width="100sp"
                    android:padding="20sp"
                    android:src="@mipmap/ic_default_user"/>
                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="40sp">
                    <TextView
                        android:id="@+id/driverName"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:paddingBottom="10sp"
                        android:paddingTop="20sp"/>
                    <TextView
                        android:id="@+id/driverPhone"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:paddingBottom="10sp"
                        android:paddingTop="20sp"/>
                    <TextView
                        android:id="@+id/driverCar"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:paddingBottom="10sp"
                        android:paddingTop="20sp"/>

                    <RatingBar
                        android:id="@+id/ratingBar"
                        style="?android:attr/ratingBarStyleIndicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:numStars="5"
                        android:stepSize="0.1" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/white">
            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="carX"
                    android:id="@+id/carX"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="carXL"
                    android:id="@+id/carXL"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delivery"
                    android:id="@+id/carBlack"/>
            </RadioGroup>

            <Button
                android:id="@+id/request"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/style_bu"
                android:text="@string/call_Driver"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:textStyle="bold"/>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
